--- a/index.html
+++ b/index.html
@@ -5,10 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script" rel="stylesheet"> 
     <link rel="stylesheet" href="./node_modules/materialize-css/dist/css/materialize.min.css">
+    <link rel="stylesheet" href="./public/app.css">
 </head>
 <body>
-    
+    <section id="main-container">
+            <div class="container">
+                    <div class="row">
+                        <div class="col s10 push-s1">
+                            <div class="row">
+                                <div class="col m5 hide-on-small-only">
+                                    <img src="./public/iphone.png" class="iphone">
+                                </div>
+                                <div class="col s12 m7">
+                                    <div class="row">
+                                            <div class="signup-box">
+                                                    <h1 class="technogram">Technogram</h1>
+                                                    <form class="signup-form">
+                                                            <h2>Resgistrate para ver fotos de tus amigos</h2>
+                                                            <div class="section">
+                                                                <a class="btn btn-fb hide-on-small-only waves-effect waves-light">Iniciar sesion con Facebook</a>
+                                                                <a class="btn btn-fb hide-on-med-and-up">Iniciar Sesion</a>
+                                                            </div>
+                                                            <div class="divider"></div>
+                                                            <div class="section">
+                                                                <input type="email" name="email" placeholder="Correo Electrónico">
+                                                                <input type="text" name="name" placeholder="Nombre y Apellido">
+                                                                <input type="text" name="username" placeholder="Nombre de Usuario">
+                                                                <input type="password" name="pass" placeholder="Contraseña">
+                                                                <button type="submit" class="btn waves-effect waves-light btn-signup">Registrate</button>
+                                                            </div>
+                                                    </form>
+                                            </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="login-box">
+                                            ¿Tienes una cuenta? <a href="/signin">Entrar</a>
+                                        </div>
+                                    </div>                        
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    </section>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 l3 center-align">
+                        <a class='dropdown-button btn btn-flat' href='#' data-activates='dropdown1'>Idiomas</a>
+
+                        <!-- Dropdown Structure -->
+                        <ul id='dropdown1' class='dropdown-content'>
+                          <li><a href="#!">Español</a></li>
+                          <li><a href="#!">English</a></li>
+                        </ul>
+                </div>
+                <div class="col s12 l3 push-l6 center-align">
+                        &copy;Technogram 2017
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </body>
 </html>
